--- a/components/CopySection/index.module.css
+++ b/components/CopySection/index.module.css
@@ -1,5 +1,5 @@
 .copyContainer {
-  @apply flex flex-col absolute text-white border border-white rounded p-2;
+  @apply max-w-48 flex flex-col absolute text-white border border-white rounded p-2;
   left: 30px;
   bottom: 100px;
 
